--- a/Accessory_figs_2015_12.Rmd
+++ b/Accessory_figs_2015_12.Rmd
@@ -68,22 +68,27 @@ plot(dispersalcosts_increment ~ seed_size,data=subset(SummaryInd),col=col.spp(sp
 mod <- lm(log(seed_size) ~ log(dispersalcosts_increment),data=subset(SummaryInd))
 words.bottom.right.logxy(mod)
 
-plot(total_accessory_Lord ~ seed_size,data=subset(SummarySppAge[["mean"]]),col=col.age(age),pch=16,log="xy", ylab="total per seed accessory costs")
-mod <- lm(log(total_accessory_Lord) ~ log(seed_size)*age,data=subset(SummaryInd,total_accessory_Lord>0))
+plot(total_accessory_Lord ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="total per seed accessory costs")
+mod <- lm(log(total_accessory_Lord) ~ log(seed_size),data=subset(SummarySpp[["mean"]],total_accessory_Lord>0))
+words.bottom.right.logxy(mod)
+summary(mod)
+
+plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="total per seed accessory costs")
+mod <- lm(log(total_accessory_Lord) ~ log(seed_size),data=subset(SummarySpp[["mean"]],total_accessory_Lord>0))
 words.bottom.right.logxy(mod)
 summary(mod)
 ```
 
 
 ```{r}
-plot(b_div_p ~ seed_size,data=subset(SummarySppAge[["mean"]]),col=col.age(age),pch=16,log="xy", ylab="per seed cost to procur pollen")
+plot(b_div_p ~ seed_size,data=subset(SummaryInd),col=col.age(age),pch=16,log="xy", ylab="per seed cost to procur pollen")
 mod <- lm(log(b_div_p) ~ log(seed_size)*age,data=subset(SummaryInd,b_div_p>0))
 words.bottom.right.logxy(mod)
 summary(mod)
-slopes <- sma(log(b_div_p) ~ log(seed_size)*age,data=subset(SummaryInd,b_div_p>0),slope.test=1)
+slopes <- sma(log(b_div_p) ~ log(seed_size),data=subset(SummaryInd,b_div_p>0),slope.test=1)
 summary(slopes)
 
-plot(c_div_p ~ seed_size,data=subset(SummarySppAge[["mean"]],c_div_p>0.00001),col=col.age(age),pch=16,log="xy", ylab="per seed cost of aborted fruits and seeds")
+plot(c_div_p ~ seed_size,data=subset(SummaryInd,c_div_p>0.00001),col=col.age(age),pch=16,log="xy", ylab="per seed cost of aborted fruits and seeds")
 mod <- lm(log(c_div_p) ~ log(seed_size)*age,data=subset(SummaryInd,c_div_p>0.00001))
 words.bottom.right.logxy(mod)
 summary(mod)
@@ -97,12 +102,14 @@ words.bottom.right.logxy(mod)
 slopes <- sma(log(dispersalcosts_increment) ~ log(seed_size),data=subset(SummaryInd,dispersalcosts_increment>0),slope.test=1)
 summary(slopes)
 
-plot(total_accessory_Lord  ~ seed_size,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+plot(total_accessory_Lord  ~ seed_size,data=subset(SummaryInd),col=col.age(age),pch=16,log="xy")
 mod <- lm(log(total_accessory_Lord) ~ log(seed_size)*age,data=subset(SummaryInd,total_accessory_Lord>0))
 words.bottom.right.logxy(mod)
+summary(mod)
 slopes <- sma(log(total_accessory_Lord) ~ log(seed_size),data=subset(SummaryInd,total_accessory_Lord>0),slope.test=1)
 summary(slopes)
-
+slopes2 <- as.matrix(coef(slopes))
+abline(log(slopes2[1]),slopes2[2])
 #calculation of total accessory investment divided by seed count (accessory_per_seed) very closely correlated with accessory costs per seed using the equations in Lord
 plot(total_accessory_Lord  ~ accessory_per_seed,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
 mod <- lm(log(total_accessory_Lord) ~ log(accessory_per_seed),data=subset(SummaryInd,total_accessory_Lord>0))
@@ -112,6 +119,8 @@ summary(slopes)
 summary(mod)
 
 plot(seed_to_ovule_ratio ~ seed_size,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+
+plot(seedset ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy")
 mod <- lm(log(seed_size) ~ log(seed_to_ovule_ratio),data=subset(SummaryInd,seed_to_ovule_ratio>0))
 words.bottom.left.logxy(mod)
 
@@ -568,3 +577,124 @@ for(spp in names(data)) {
 
 plot(seedcosts~seed_size,data=subset(SummaryInd),log="xy",col=col.spp(species), pch=16)
 plot(accessory_per_seed~seed_size,data=subset(SummaryInd),log="xy",col=col.spp(species), pch=16)
+
+par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+plot(total_accessory_Lord ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylab="total per seed accessory costs")
+abline(0,1)
+mod <- lm(log(total_accessory_Lord) ~ log(seed_size),data=subset(SummarySpp[["mean"]],total_accessory_Lord>0))
+words.bottom.right.logxy(mod)
+summary(mod)
+
+plot(c_div_p ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),col=col.spp(species),pch=16,log="xy")
+abline(0,1)
+mod <- lm(log(c_div_p) ~ log(seed_size),data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER",total_accessory_Lord>0))
+words.bottom.right.logxy(mod)
+
+plot(b_div_p ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy")
+abline(1.1,1)
+mod <- lm(log(b_div_p) ~ log(seed_size),data=subset(SummarySpp[["mean"]],total_accessory_Lord>0))
+words.bottom.right.logxy(mod)
+
+plot(dispersalcosts_increment ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy")
+abline(0,1)
+mod <- lm(log(dispersalcosts_increment) ~ log(seed_size),data=subset(SummarySpp[["mean"]],dispersalcosts_increment>0))
+words.bottom.right.logxy(mod)
+
+
+```{r}
+par(mfrow=c(4,4), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+xvar <- "total_accessory_Lord"
+yvar <- "RA"
+
+data <- subset(SummaryInd,total_accessory_Lord>0&RA>0&age>2)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+```{r}
+par(mfrow=c(4,4), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+xvar <- "total_accessory_Lord"
+yvar <- "repro_inv"
+
+data <- subset(SummaryInd,total_accessory_Lord>0&RA>0&age>2)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+
+```{r}
+par(mfrow=c(4,4), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+xvar <- "b_div_p"
+yvar <- "repro_inv"
+
+data <- subset(SummaryInd,b_div_p>0&RA>0&age>2)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+#seedset lower in plants with bigger seeds, except at oldest site, when large seeded species doing relatively better and relationship flat
+```{r}
+par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+plot(seedset ~ seed_size,data=subset(SummarySppAge[["mean"]],age==32),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(seed_size) ~ log(seedset),data=subset(SummarySppAge[["mean"]],age==32))
+words.bottom.left.logxy(mod)
+
+plot(seedset ~ seed_size,data=subset(SummarySppAge[["mean"]],age==9),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(seed_size) ~ log(seedset),data=subset(SummarySppAge[["mean"]],age==9))
+words.bottom.left.logxy(mod)
+
+plot(seedset ~ seed_size,data=subset(SummarySppAge[["mean"]],age==7),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(seed_size) ~ log(seedset),data=subset(SummarySppAge[["mean"]],age==7))
+words.bottom.left.logxy(mod)
+
+plot(seedset ~ seed_size,data=subset(SummarySppAge[["mean"]],age==5),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(seed_size) ~ log(seedset),data=subset(SummarySppAge[["mean"]],age==5&seedset>0))
+words.bottom.left.logxy(mod)
+```
+
+```{r}
+par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+plot(b_div_p ~ seed_size,data=subset(SummaryInd),col=col.age(age),pch=16,log="xy")
+abline(0,1)
+plot(c_div_p ~ seed_size,data=subset(SummaryInd,species!="COER"),col=col.age(age),pch=16,log="xy")
+abline(0,1)
+plot(dispersalcosts_increment ~ seed_size,data=subset(SummaryInd),col=col.age(age),pch=16,log="xy")
+abline(0,1)
+plot(total_accessory_Lord ~ seed_size,data=subset(SummaryInd),col=col.age(age),pch=16,log="xy")
+```
